--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!--jebac disa-->
 <!DOCTYPE html>
 <html lang="pl">
 
@@ -16,7 +15,7 @@
 <body>
   <header>
     <nav>
-      <div class="logo">JOIN US <img src="img/free_sample_by_wix.jpeg" alt="logo"></div>
+      <div class="logo"><img src="img/free_sample_by_wix.jpeg" alt="logo"></div>
       <button class="login">Zaloguj się</button>
     </nav>
   </header>
@@ -115,4 +114,6 @@
   <section class="test">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim adipisci odit minima, nesciunt animi, numquam sequi dolore reprehenderit modi, a quia laboriosam vitae eius placeat est ullam non nihil mollitia.
   </section>
-</body></html>
+</body>
+
+</html>
