--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body>
   <header>
     <nav>
-      <div class="logo"><img src="img/free_sample_by_wix.jpeg" alt="logo"></div>
+      <a href="index.html">
+        <div class="logo"><img src="img/free_sample_by_wix.jpeg" alt="logo"></div>
+      </a>
       <button class="login">Zaloguj się</button>
     </nav>
   </header>
@@ -114,6 +116,4 @@
   <section class="test">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim adipisci odit minima, nesciunt animi, numquam sequi dolore reprehenderit modi, a quia laboriosam vitae eius placeat est ullam non nihil mollitia.
   </section>
-</body>
-
-</html>
+</body></html>
