--- a/wyniki.html
+++ b/wyniki.html
@@ -8,12 +8,15 @@
   <!--Czcionka Roboto-->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <!--  Lupa do wyszukiwarki-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
   <header>
     <nav>
-      <div class="logo"><img src="img/free_sample_by_wix.jpeg" alt="logo"></div>
+      <a href="index.html">
+        <div class="logo"><img src="img/free_sample_by_wix.jpeg" alt="logo"></div>
+      </a>
       <button class="login">Zaloguj się</button>
     </nav>
   </header>
@@ -24,14 +27,14 @@
         <button type="submit"><i class="fa fa-search"></i></button>
       </form>
     </div>
-</div>
-<div class="side-menu">
-<ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ul>
-</div>  
+  </div>
+  <div class="side-menu">
+    <ul>
+      <li>Coffee</li>
+      <li>Tea</li>
+      <li>Milk</li>
+    </ul>
+  </div>
   <!--zajebiste nazwy sobie wymyslilem pog-->
   <div class="results">
     <div class="result">
@@ -50,5 +53,4 @@
       <img class='logo1' src="img/free_sample_by_wix.jpeg" alt="logo">
     </div>
   </div>
-</body>
-</html>
+</body></html>
