--- a/login.html
+++ b/login.html
@@ -22,8 +22,23 @@
     </nav>
   </header>
   <section class="login-container">
-    <div class="login-tile">Logowanie</div>
-    <div class="login-tile">Rejestracja</div>
+    <div class="login-tile">
+      <span class="login-header">Logowanie</span>
+      <form action="">
+        <label for="mail"><b>Adres e-mail:</b></label>
+        <input type="text" placeholder="Wpisz adres e-mail" name="mail" required>
+
+        <label for="password"><b>Hasło:</b></label>
+        <input type="password" placeholder="Wpisz hasło" name="password" required>
+
+        <button type="submit">Zaloguj się</button>
+      </form>
+      Zapomiałeś hasła?
+    </div>
+    <div class="login-tile">
+      <span class="login-header">Rejestracja</span>
+
+    </div>
   </section>
   <section class="footer">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim adipisci odit minima, nesciunt animi, numquam sequi dolore reprehenderit modi, a quia laboriosam vitae eius placeat est ullam non nihil mollitia.
