Add register options

--- a/login.html
+++ b/login.html
@@ -37,7 +37,11 @@
     </div>
     <div class="login-tile">
       <span class="login-header">Rejestracja</span>
-
+      <p>Szukasz fachowca? Uzyskaj dostęp do special features z kontem! (Moja kreatywność robi daba)</p>
+      <button>Jestem klientem</button>
+      <hr>
+      <p>Jesteś fachowcem i chcesz znaleźć klientów innych niż hot18 z zatkanym zlewem? Zarejestruj się już teraz. Johny Sins poleca!</p>
+      <button>Jestem fachowcem</button>
     </div>
   </section>
   <section class="footer">
