Add links and register page for professional

--- a/index.html
+++ b/index.html
@@ -18,23 +18,30 @@
       <a href="index.html">
         <div class="logo"><img src="img/free_sample_by_wix.jpeg" alt="logo"></div>
       </a>
-      <button class="login">Zaloguj się</button>
+      <a href="login.html">
+        <button class="login">Zaloguj się</button>
+      </a>
     </nav>
   </header>
   <section class="search-background">
     <div class="search-container">
       <form action="">
         <input type="text" placeholder="Wyszukaj kategorię lub miasto" name="search">
-        <button type="submit"><i class="fa fa-search"></i></button>
+        <button type="submit">
+          <i class="fa fa-search"></i>
+        </button>
       </form>
     </div>
   </section>
   <section class="categories">
     <div class="container">
+
       <div>
-        <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
-          <div class="text">Lorem</div>
-        </div>
+        <a href="wyniki.html">
+          <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+            <div class="text">Lorem</div>
+          </div>
+        </a>
       </div>
       <div>
         <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
