--- a/wyniki.html
+++ b/wyniki.html
@@ -18,7 +18,9 @@
       <a href="index.html">
         <div class="logo"><img src="img/free_sample_by_wix.jpeg" alt="logo"></div>
       </a>
-      <button class="login">Zaloguj się</button>
+      <a href="login.html">
+        <button class="login">Zaloguj się</button>
+      </a>
     </nav>
   </header>
   <div class="search">
@@ -58,4 +60,6 @@
       </div>
     </div>
   </div>
-</body></html>
+</body>
+
+</html>
