--- a/index.html
+++ b/index.html
@@ -123,6 +123,4 @@
   <section class="footer">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim adipisci odit minima, nesciunt animi, numquam sequi dolore reprehenderit modi, a quia laboriosam vitae eius placeat est ullam non nihil mollitia.
   </section>
-</body>
-
-</html>
+</body></html>
