Fix images on hosting

--- a/register-client.html
+++ b/register-client.html
@@ -16,7 +16,7 @@
   <header>
     <nav>
       <a href="index.html">
-        <div class="logo"><img src="img/free_sample_by_wix.jpeg" alt="logo"></div>
+        <div class="logo"><img src="img/ikona.jpeg" alt="logo"></div>
       </a>
       <a href="login.html">
         <button class="login">Zaloguj się</button>
@@ -54,6 +54,4 @@
   <section class="footer">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim adipisci odit minima, nesciunt animi, numquam sequi dolore reprehenderit modi, a quia laboriosam vitae eius placeat est ullam non nihil mollitia.
   </section>
-</body>
-
-</html>
+</body></html>
