--- a/wyniki.html
+++ b/wyniki.html
@@ -16,7 +16,7 @@
   <header>
     <nav>
       <a href="index.html">
-        <div class="logo"><img src="img/free_sample_by_wix.jpeg" alt="logo"></div>
+        <div class="logo"><img src="img/ikona.jpeg" alt="logo"></div>
       </a>
       <a href="login.html">
         <button class="login">Zaloguj się</button>
@@ -44,22 +44,20 @@
     <!--zajebiste nazwy sobie wymyslilem pog-->
     <div class="results">
       <div class="result">
-        <img class='logo1' src="img/free_sample_by_wix.jpeg" alt="logo">Lorem Ipsum
+        <img class='logo1' src="img/ikona.jpeg" alt="logo">Lorem Ipsum
       </div>
       <div class="result">
-        <img class='logo1' src="img/free_sample_by_wix.jpeg" alt="logo">Lorem Ipsum
+        <img class='logo1' src="img/ikona.jpeg" alt="logo">Lorem Ipsum
       </div>
       <div class="result">
-        <img class='logo1' src="img/free_sample_by_wix.jpeg" alt="logo">Lorem Ipsum
+        <img class='logo1' src="img/ikona.jpeg" alt="logo">Lorem Ipsum
       </div>
       <div class="result">
-        <img class='logo1' src="img/free_sample_by_wix.jpeg" alt="logo">Lorem Ipsum
+        <img class='logo1' src="img/ikona.jpeg" alt="logo">Lorem Ipsum
       </div>
       <div class="result">
-        <img class='logo1' src="img/free_sample_by_wix.jpeg" alt="logo">Lorem Ipsum
+        <img class='logo1' src="img/ikona.jpeg" alt="logo">Lorem Ipsum
       </div>
     </div>
   </div>
-</body>
-
-</html>
+</body></html>
