--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
     <nav>
       <a href="index.html">
-        <div class="logo"><img src="img/free_sample_by_wix.jpeg" alt="logo"></div>
+        <div class="logo"><img src="img/ikona.jpeg" alt="logo"></div>
       </a>
       <a href="login.html">
         <button class="login">Zaloguj się</button>
@@ -38,83 +38,83 @@
 
       <div>
         <a href="wyniki.html">
-          <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+          <div class="content"><img src="img/ikona.jpeg" alt="logo">
             <div class="text">Lorem</div>
           </div>
         </a>
       </div>
       <div>
-        <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+        <div class="content"><img src="img/ikona.jpeg" alt="logo">
           <div class="text">Lorem</div>
         </div>
       </div>
       <div>
-        <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+        <div class="content"><img src="img/ikona.jpeg" alt="logo">
           <div class="text">Lorem</div>
         </div>
       </div>
       <div>
-        <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+        <div class="content"><img src="img/ikona.jpeg" alt="logo">
           <div class="text">Lorem</div>
         </div>
       </div>
       <div>
-        <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+        <div class="content"><img src="img/ikona.jpeg" alt="logo">
           <div class="text">Lorem</div>
         </div>
       </div>
       <div>
-        <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+        <div class="content"><img src="img/ikona.jpeg" alt="logo">
           <div class="text">Lorem</div>
         </div>
       </div>
       <div>
-        <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+        <div class="content"><img src="img/ikona.jpeg" alt="logo">
           <div class="text">Lorem</div>
         </div>
       </div>
       <div>
-        <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+        <div class="content"><img src="img/ikona.jpeg" alt="logo">
           <div class="text">Lorem</div>
         </div>
       </div>
       <div>
-        <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+        <div class="content"><img src="img/ikona.jpeg" alt="logo">
           <div class="text">Lorem</div>
         </div>
       </div>
       <div>
-        <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+        <div class="content"><img src="img/ikona.jpeg" alt="logo">
           <div class="text">Lorem</div>
         </div>
       </div>
       <div>
-        <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+        <div class="content"><img src="img/ikona.jpeg" alt="logo">
           <div class="text">Lorem</div>
         </div>
       </div>
       <div>
-        <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+        <div class="content"><img src="img/ikona.jpeg" alt="logo">
           <div class="text">Lorem</div>
         </div>
       </div>
       <div>
-        <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+        <div class="content"><img src="img/ikona.jpeg" alt="logo">
           <div class="text">Lorem</div>
         </div>
       </div>
       <div>
-        <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+        <div class="content"><img src="img/ikona.jpeg" alt="logo">
           <div class="text">Lorem</div>
         </div>
       </div>
       <div>
-        <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+        <div class="content"><img src="img/ikona.jpeg" alt="logo">
           <div class="text">Lorem</div>
         </div>
       </div>
       <div>
-        <div class="content"><img src="img/free_sample_by_wix.jpeg" alt="logo">
+        <div class="content"><img src="img/ikona.jpeg" alt="logo">
           <div class="text">Lorem</div>
         </div>
       </div>
